--- a/test/root_map.org
+++ b/test/root_map.org
@@ -1,17 +1,19 @@
 * 0x0-0x313 root_map
-Hierarchy: root_map
-Absolute Base Address: 0x0
-Size: 0x314 Bytes
+Hierarchy: ~root_map~ \\
+Absolute Base Address: 0x0 \\
+Size: 0x314 Bytes \\
+
 ** 0x0-0x117 test_map_1_inst
-Hierarchy: root_map.test_map_1_inst
-Absolute Base Address: 0x0
-Size: 0x118 Bytes
-*** TEM21
-Hierarchy: root_map.test_map_1_inst.TEM21
-Absolute Address: 0xc
-Base Offset: 0xc
-Width: 0x4
-Description: xxx
+Hierarchy: ~root_map.test_map_1_inst~ \\
+Absolute Base Address: 0x0 \\
+Size: 0x118 Bytes \\
+
+*** 0xc-0xf TEM21
+Hierarchy: ~root_map.test_map_1_inst.TEM21~ \\
+Absolute Address: 0xc \\
+Base Offset: 0xc \\
+Size: 0x4 Bytes \\
+Description: xxx \\
 
 #+ATTR_LATEX: :environment longtable :align |c|p{0.3\textwidth}|p{0.2\textwidth}|c|l|l|
 |-------+----------+-----------------+---------------+-----------|
@@ -23,24 +25,25 @@ Description: xxx
 |-------+----------+-----------------+---------------+-----------|
 
 *FIELD_3*
-    + Also named as: FIELD_3
-    + Description: xxx
+    + named as: FIELD_3
+    + description: xxx
 
 *FIELD_2*
-    + Also named as: FIELD_2
-    + Synchronous Reset Signals: sync_rst_local_1, sync_rst_local_2
-    + Description: xxx
+    + named as: FIELD_2
+    + synchronous reset signals: ~sync_rst_local_1, sync_rst_local_2~
+    + description: xxx
 
 *FIELD_1*
-    + Also named as: FIELD_1
-    + Synchronous Reset Signals: sync_rst_local_1
-    + Description: xxx
-*** TEM22
-Hierarchy: root_map.test_map_1_inst.TEM22
-Absolute Address: 0x10
-Base Offset: 0x10
-Width: 0x4
-Description: xxx
+    + named as: FIELD_1
+    + synchronous reset signals: ~sync_rst_local_1~
+    + description: xxx
+
+*** 0x10-0x13 TEM22
+Hierarchy: ~root_map.test_map_1_inst.TEM22~ \\
+Absolute Address: 0x10 \\
+Base Offset: 0x10 \\
+Size: 0x4 Bytes \\
+Description: xxx \\
 
 #+ATTR_LATEX: :environment longtable :align |c|p{0.3\textwidth}|p{0.2\textwidth}|c|l|l|
 |-------+----------+-----------------+---------------+-----------|
@@ -52,22 +55,23 @@ Description: xxx
 |-------+----------+-----------------+---------------+-----------|
 
 *FIELD_3*
-    + Also named as: FIELD_3
-    + Description: xxx
+    + named as: FIELD_3
+    + description: xxx
 
 *FIELD_2*
-    + Also named as: FIELD_2
-    + Description: xxx
+    + named as: FIELD_2
+    + description: xxx
 
 *FIELD_1*
-    + Also named as: FIELD_1
-    + Description: xxx
-*** TEM23
-Hierarchy: root_map.test_map_1_inst.TEM23
-Absolute Address: 0x14
-Base Offset: 0x14
-Width: 0x4
-Description: xxx
+    + named as: FIELD_1
+    + description: xxx
+
+*** 0x14-0x17 TEM23
+Hierarchy: ~root_map.test_map_1_inst.TEM23~ \\
+Absolute Address: 0x14 \\
+Base Offset: 0x14 \\
+Size: 0x4 Bytes \\
+Description: xxx \\
 
 #+ATTR_LATEX: :environment longtable :align |c|p{0.3\textwidth}|p{0.2\textwidth}|c|l|l|
 |-------+----------+-----------------+---------------+-----------|
@@ -79,22 +83,23 @@ Description: xxx
 |-------+----------+-----------------+---------------+-----------|
 
 *FIELD_3*
-    + Also named as: FIELD_3
-    + Description: xxx
+    + named as: FIELD_3
+    + description: xxx
 
 *FIELD_2*
-    + Also named as: FIELD_2
-    + Description: xxx
+    + named as: FIELD_2
+    + description: xxx
 
 *FIELD_1*
-    + Also named as: FIELD_1
-    + Description: xxx
-*** TEM21_alias
-Hierarchy: root_map.test_map_1_inst.TEM21_alias
-Absolute Address: 0x10c
-Base Offset: 0x10c
-Width: 0x4
-Description: xxx
+    + named as: FIELD_1
+    + description: xxx
+
+*** 0x10c-0x10f TEM21_alias
+Hierarchy: ~root_map.test_map_1_inst.TEM21_alias~ \\
+Absolute Address: 0x10c \\
+Base Offset: 0x10c \\
+Size: 0x4 Bytes \\
+Description: xxx \\
 
 #+ATTR_LATEX: :environment longtable :align |c|p{0.3\textwidth}|p{0.2\textwidth}|c|l|l|
 |-------+----------+-----------------+---------------+-----------|
@@ -106,24 +111,25 @@ Description: xxx
 |-------+----------+-----------------+---------------+-----------|
 
 *FIELD_3*
-    + Also named as: FIELD_3
-    + Description: xxx
+    + named as: FIELD_3
+    + description: xxx
 
 *FIELD_2*
-    + Also named as: FIELD_2
-    + Synchronous Reset Signals: sync_rst_local_1, sync_rst_local_2
-    + Description: xxx
+    + named as: FIELD_2
+    + synchronous reset signals: ~sync_rst_local_1, sync_rst_local_2~
+    + description: xxx
 
 *FIELD_1*
-    + Also named as: FIELD_1
-    + Synchronous Reset Signals: sync_rst_local_1
-    + Description: xxx
-*** TEM22_alias
-Hierarchy: root_map.test_map_1_inst.TEM22_alias
-Absolute Address: 0x110
-Base Offset: 0x110
-Width: 0x4
-Description: xxx
+    + named as: FIELD_1
+    + synchronous reset signals: ~sync_rst_local_1~
+    + description: xxx
+
+*** 0x110-0x113 TEM22_alias
+Hierarchy: ~root_map.test_map_1_inst.TEM22_alias~ \\
+Absolute Address: 0x110 \\
+Base Offset: 0x110 \\
+Size: 0x4 Bytes \\
+Description: xxx \\
 
 #+ATTR_LATEX: :environment longtable :align |c|p{0.3\textwidth}|p{0.2\textwidth}|c|l|l|
 |-------+----------+-----------------+---------------+-----------|
@@ -135,22 +141,23 @@ Description: xxx
 |-------+----------+-----------------+---------------+-----------|
 
 *FIELD_3*
-    + Also named as: FIELD_3 ALIAS
-    + Description: xxx
+    + named as: FIELD_3 ALIAS
+    + description: xxx
 
 *FIELD_2*
-    + Also named as: FIELD_2
-    + Description: xxx
+    + named as: FIELD_2
+    + description: xxx
 
 *FIELD_1*
-    + Also named as: FIELD_1
-    + Description: xxx
-*** TEM23_alias
-Hierarchy: root_map.test_map_1_inst.TEM23_alias
-Absolute Address: 0x114
-Base Offset: 0x114
-Width: 0x4
-Description: xxx
+    + named as: FIELD_1
+    + description: xxx
+
+*** 0x114-0x117 TEM23_alias
+Hierarchy: ~root_map.test_map_1_inst.TEM23_alias~ \\
+Absolute Address: 0x114 \\
+Base Offset: 0x114 \\
+Size: 0x4 Bytes \\
+Description: xxx \\
 
 #+ATTR_LATEX: :environment longtable :align |c|p{0.3\textwidth}|p{0.2\textwidth}|c|l|l|
 |-------+----------+-----------------+---------------+-----------|
@@ -162,26 +169,28 @@ Description: xxx
 |-------+----------+-----------------+---------------+-----------|
 
 *FIELD_3*
-    + Also named as: FIELD_3
-    + Description: xxx
+    + named as: FIELD_3
+    + description: xxx
 
 *FIELD_2*
-    + Also named as: FIELD_2
-    + Description: xxx
+    + named as: FIELD_2
+    + description: xxx
 
 *FIELD_1*
-    + Also named as: FIELD_1
-    + Description: xxx
+    + named as: FIELD_1
+    + description: xxx
+
 ** 0x118-0x11b test_map_2_inst
-Hierarchy: root_map.test_map_2_inst
-Absolute Base Address: 0x118
-Size: 0x4 Bytes
-*** shared_2
-Hierarchy: root_map.test_map_2_inst.shared_2
-Absolute Address: 0x118
-Base Offset: 0x0
-Width: 0x4
-Description: xxx
+Hierarchy: ~root_map.test_map_2_inst~ \\
+Absolute Base Address: 0x118 \\
+Size: 0x4 Bytes \\
+
+*** 0x118-0x11b shared_2
+Hierarchy: ~root_map.test_map_2_inst.shared_2~ \\
+Absolute Address: 0x118 \\
+Base Offset: 0x0 \\
+Size: 0x4 Bytes \\
+Description: xxx \\
 
 #+ATTR_LATEX: :environment longtable :align |c|p{0.3\textwidth}|p{0.2\textwidth}|c|l|l|
 |-------+----------+-----------------+---------------+-----------|
@@ -192,22 +201,24 @@ Description: xxx
 |-------+----------+-----------------+---------------+-----------|
 
 *FIELD_2*
-    + Also named as: FIELD_1
-    + Description: xxx
+    + named as: FIELD_1
+    + description: xxx
 
 *FIELD_1*
-    + Also named as: FIELD_1
-    + Description: xxx
+    + named as: FIELD_1
+    + description: xxx
+
 ** 0x11c-0x11f test_map_3_inst
-Hierarchy: root_map.test_map_3_inst
-Absolute Base Address: 0x11c
-Size: 0x4 Bytes
-*** shared_3
-Hierarchy: root_map.test_map_3_inst.shared_3
-Absolute Address: 0x11c
-Base Offset: 0x0
-Width: 0x4
-Description: xxx
+Hierarchy: ~root_map.test_map_3_inst~ \\
+Absolute Base Address: 0x11c \\
+Size: 0x4 Bytes \\
+
+*** 0x11c-0x11f shared_3
+Hierarchy: ~root_map.test_map_3_inst.shared_3~ \\
+Absolute Address: 0x11c \\
+Base Offset: 0x0 \\
+Size: 0x4 Bytes \\
+Description: xxx \\
 
 #+ATTR_LATEX: :environment longtable :align |c|p{0.3\textwidth}|p{0.2\textwidth}|c|l|l|
 |-------+----------+-----------------+---------------+-----------|
@@ -218,22 +229,23 @@ Description: xxx
 |-------+----------+-----------------+---------------+-----------|
 
 *FIELD_2*
-    + Also named as: FIELD_1
-    + Description: xxx
+    + named as: FIELD_1
+    + description: xxx
 
 *FIELD_1*
-    + Also named as: FIELD_1
-    + Description: xxx
+    + named as: FIELD_1
+    + description: xxx
+
 ** 0x200-0x30f ipxact_block_example_inst
-Hierarchy: root_map.ipxact_block_example_inst
-Absolute Base Address: 0x200
-Size: 0x110 Bytes
-*** reg1
-Hierarchy: root_map.ipxact_block_example_inst.reg1
-Absolute Address: 0x200
-Base Offset: 0x0
-Width: 0x4
-Description: None
+Hierarchy: ~root_map.ipxact_block_example_inst~ \\
+Absolute Base Address: 0x200 \\
+Size: 0x110 Bytes \\
+
+*** 0x200-0x203 reg1
+Hierarchy: ~root_map.ipxact_block_example_inst.reg1~ \\
+Absolute Address: 0x200 \\
+Base Offset: 0x0 \\
+Size: 0x4 Bytes \\
 
 #+ATTR_LATEX: :environment longtable :align |c|p{0.3\textwidth}|p{0.2\textwidth}|c|l|l|
 |-------+----------+-----------------+---------------+-----------|
@@ -246,12 +258,12 @@ Description: None
 *f1*
 
 *f2*
-*** reg_array[0]
-Hierarchy: root_map.ipxact_block_example_inst.reg_array[0]
-Absolute Address: 0x300
-Base Offset: 0x100
-Width: 0x4
-Description: None
+
+*** 0x300-0x303 reg_array[0]
+Hierarchy: ~root_map.ipxact_block_example_inst.reg_array[0]~ \\
+Absolute Address: 0x300 \\
+Base Offset: 0x100 \\
+Size: 0x4 Bytes \\
 
 #+ATTR_LATEX: :environment longtable :align |c|p{0.3\textwidth}|p{0.2\textwidth}|c|l|l|
 |-------+----------+-----------------+---------------+-----------|
@@ -261,12 +273,12 @@ Description: None
 |-------+----------+-----------------+---------------+-----------|
 
 *x*
-*** reg_array[1]
-Hierarchy: root_map.ipxact_block_example_inst.reg_array[1]
-Absolute Address: 0x304
-Base Offset: 0x104
-Width: 0x4
-Description: None
+
+*** 0x304-0x307 reg_array[1]
+Hierarchy: ~root_map.ipxact_block_example_inst.reg_array[1]~ \\
+Absolute Address: 0x304 \\
+Base Offset: 0x104 \\
+Size: 0x4 Bytes \\
 
 #+ATTR_LATEX: :environment longtable :align |c|p{0.3\textwidth}|p{0.2\textwidth}|c|l|l|
 |-------+----------+-----------------+---------------+-----------|
@@ -276,12 +288,12 @@ Description: None
 |-------+----------+-----------------+---------------+-----------|
 
 *x*
-*** reg_array[2]
-Hierarchy: root_map.ipxact_block_example_inst.reg_array[2]
-Absolute Address: 0x308
-Base Offset: 0x108
-Width: 0x4
-Description: None
+
+*** 0x308-0x30b reg_array[2]
+Hierarchy: ~root_map.ipxact_block_example_inst.reg_array[2]~ \\
+Absolute Address: 0x308 \\
+Base Offset: 0x108 \\
+Size: 0x4 Bytes \\
 
 #+ATTR_LATEX: :environment longtable :align |c|p{0.3\textwidth}|p{0.2\textwidth}|c|l|l|
 |-------+----------+-----------------+---------------+-----------|
@@ -291,12 +303,12 @@ Description: None
 |-------+----------+-----------------+---------------+-----------|
 
 *x*
-*** reg_array[3]
-Hierarchy: root_map.ipxact_block_example_inst.reg_array[3]
-Absolute Address: 0x30c
-Base Offset: 0x10c
-Width: 0x4
-Description: None
+
+*** 0x30c-0x30f reg_array[3]
+Hierarchy: ~root_map.ipxact_block_example_inst.reg_array[3]~ \\
+Absolute Address: 0x30c \\
+Base Offset: 0x10c \\
+Size: 0x4 Bytes \\
 
 #+ATTR_LATEX: :environment longtable :align |c|p{0.3\textwidth}|p{0.2\textwidth}|c|l|l|
 |-------+----------+-----------------+---------------+-----------|
@@ -306,12 +318,12 @@ Description: None
 |-------+----------+-----------------+---------------+-----------|
 
 *x*
-** reg_t
-Hierarchy: root_map.reg_t
-Absolute Address: 0x310
-Base Offset: 0x310
-Width: 0x4
-Description: None
+
+** 0x310-0x313 reg_t
+Hierarchy: ~root_map.reg_t~ \\
+Absolute Address: 0x310 \\
+Base Offset: 0x310 \\
+Size: 0x4 Bytes \\
 
 #+ATTR_LATEX: :environment longtable :align |c|p{0.3\textwidth}|p{0.2\textwidth}|c|l|l|
 |-------+----------+-----------------+---------------+-----------|
@@ -321,3 +333,4 @@ Description: None
 |-------+----------+-----------------+---------------+-----------|
 
 *f*
+
